--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,3 +48,16 @@ steps:
     command: 'build'
     arguments: '--no-restore --configuration Release'
     projects: '**/*.csproj'
+    
+- task: DotNetCoreCLI@2
+  displayName: 'Publish the projet - Release'
+  inputs:
+    command: 'publish'
+    projects: '**/*.csproj'
+    publishWebProjects: false
+    arguments: '--no-build --configuration Release -output $(BuilId.ArtifactStagingDirectory)/Release'
+    zipAferPublish: true
+    
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: drop'
+  condition: succeeded()
